# whiteboard_robot

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: controllers.yaml
launch/: simulate.launch.py
urdf/: gantry.urdf.xacro
whiteboard_robot/: whiteboard_cleaner_node.py
world/: whiteboard.world
